# progi

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  alembic.ini  justfile  pyproject.toml  renovate.json
.github/: mcp-registry.md  server.json
.github/workflows/: ci.yml  publish.yml  release-please.yml  update-lockfile.yml  update-registry-version.yml  update-uv-lock.yml
alembic/: env.py
docs/: FAQ.md  README.md  configuration.md  example-workflows.md  glossary.md  mcp.json.example  use-cases.md
frontend/: input.css
progi/: __init__.py  cli.py  config.py  db.py  logging_setup.py  mcp_server.py  models.py  seed.py
progi/alembic/versions/: 0001_initial_schema.py  0002_library_entries.py  0003_library_entry_name_unique.py  0005_drop_input_output_spec.py  0006_parallel_edge.py  0007_sub_workflow_support.py  4643697c3984_make_step_instances_step_id_nullable_.py
progi/prompts/: playbook.md  workflow_playbook.md  workflow_skeleton.md
progi/web/: __init__.py  app.py
progi/web/routers/: __init__.py  board.py  library.py  workflows.py
progi/web/static/: app.js  style.css
progi/web/templates/: base.html  base_partial.html
progi/web/templates/pages/: board.html  library.html  workflows.html
progi/web/templates/partials/: board.html  library_entry_detail.html  step_detail.html  task_detail.html
tests/: conftest.py  test_db.py
